--- a/index.css
+++ b/index.css
@@ -1,16 +1,19 @@
-body{
+body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
 }
-#root{
+
+#root {
     overflow-x: hidden;
 }
-.content{
+
+.content {
     z-index: 100;
 }
-.content::before{
+
+.content::before {
     content: '';
     position: absolute;
     border-radius: 20px;
@@ -21,14 +24,47 @@ body{
     height: 50px;
     background: #FFF;
 }
+
 @media screen and (max-width: 700px) {
-    .txt{
+    .txt {
         font-size: 200px;
     }
 }
+
 @media screen and (max-width: 500px) {
-    .from{
+    .from {
         display: flex;
         flex-direction: column;
     }
+}
+
+.down {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1s;
+}
+
+.setu {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.right {
+    opacity: 0;
+    transform: translateX(100px);
+    transition: all 1s;
+}
+
+.setr {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.hidde {
+    opacity: 0;
+    transition: all 3s;
+}
+
+.showing {
+    opacity: 1;
 }
