--- a/index.css
+++ b/index.css
@@ -88,3 +88,174 @@ body {
 .bg{
     background: linear-gradient(180deg, transparent, black, black, black, black);
 }
+
+
+.swiper{
+    margin: 100px auto;
+    width: 100%;
+    height: 240px;
+}
+
+.swiper-slide{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.swiper-slide:nth-child(1n){
+    background: red;
+}
+.swiper-slide:nth-child(2n){
+    background: blue;
+}
+.swiper-slide:nth-child(3n){
+    background: green;
+}
+.swiper-slide:nth-child(4n){
+    background: yellow;
+}
+
+
+.wrapper{
+    width: 100%;
+    height: 100%;
+    padding: 70px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.containee{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.card{
+    width: 80px;
+    border-radius: 2rem;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+    box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.8);
+}
+.card > .row{
+    color: #FFF;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 0 10px;
+    align-items: center;
+    justify-content: center;
+}
+.card > .row > .icon{
+    color: #FFF;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: none;
+}
+.card > .row > .description{
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 520px;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: .3s ease;
+}
+
+.description p {
+    color: #9a9aa3;
+    padding-top: 5px;
+}
+.description h4{
+    text-transform: uppercase;
+}
+input{
+    display: none;
+}
+input:checked + label{
+    width: 600px;
+}
+input:checked + label .description{
+    display: flex !important;
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+input:checked + label .icon{
+    margin-right: 10px !important;
+}
+.card[for='c1']{
+    background-image: url(@/assets/1.jpg);
+}
+.card[for='c2']{
+    background-image: url(@/assets/11.jpg);
+}
+.card[for='c3']{
+    background-image: url(@/assets/12.jpg);
+}
+.card[for='c4']{
+    background-image: url(@/assets/8.jpg);
+}
+.card[for='c5']{
+    background-image: url(@/assets/10.jpg);
+}
+.card[for='c6']{
+    background-image: url(@/assets/build.jpg);
+}
+.card[for='c7']{
+    background-image: url(@/assets/9.jpg);
+}
+
+
+@media screen and (max-width: 768px) {
+    .wrapper{
+        height: 100%;
+        padding: 50px 0;
+    }
+    .card{
+        width: 80%;
+        height: 100px;
+        margin: 0px auto;
+    }
+    .card > .row{
+        justify-content: start;
+        height: 100%;
+    }
+    .card > .row > .icon{
+        color: white;
+        border-radius: 50%;
+        background: #3d3d43;
+    }
+    input:checked + label .icon{
+        align-self: flex-end !important;
+        margin: 20px 0;
+    }
+    input:checked + label .description{
+        align-self: flex-end !important;
+        margin: 0px 0;
+    }
+    input:checked + label{
+        height: 300px;
+        width: 80%;
+    }
+    .containee{
+        height: 100%;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
