--- a/index.css
+++ b/index.css
@@ -118,150 +118,196 @@ body {
     background: yellow;
 }
 
-
-.wrapper{
-    width: 100%;
-    height: 100%;
-    padding: 70px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.containee{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-.card{
-    width: 80px;
-    border-radius: 2rem;
-    background-size: cover;
-    cursor: pointer;
-    overflow: hidden;
-    margin: 0 10px;
-    display: flex;
-    align-items: flex-end;
-    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
-    box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.8);
-}
-.card > .row{
-    color: #FFF;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 0 10px;
-    align-items: center;
-    justify-content: center;
-}
-.card > .row > .icon{
-    color: #FFF;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: none;
-}
-.card > .row > .description{
-    display: none;
-    justify-content: center;
-    flex-direction: column;
-    overflow: hidden;
-    height: 80px;
-    width: 520px;
-    transform: translateY(30px);
-    transition-delay: .3s;
-    transition: .3s ease;
-}
-
-.description p {
-    color: #9a9aa3;
-    padding-top: 5px;
-}
-.description h4{
-    text-transform: uppercase;
-}
-input{
-    display: none;
-}
-input:checked + label{
-    width: 600px;
-}
-input:checked + label .description{
-    display: flex !important;
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-}
-input:checked + label .icon{
-    margin-right: 10px !important;
-}
-.card[for='c1']{
-    background-image: url(@/assets/21.jpg);
-}
-.card[for='c2']{
-    background-image: url(@/assets/10.jpg);
-}
-.card[for='c3']{
-    background-image: url(@/assets/9.jpg);
-}
-.card[for='c4']{
-    background-image: url(@/assets/12.jpg);
-}
-.card[for='c5']{
-    background-image: url(@/assets/1.jpg);
-}
-.card[for='c6']{
-    background-image: url(@/assets/11.jpg);
-}
-.card[for='c7']{
-    background-image: url(@/assets/build.jpg);
-}
-
-
-@media screen and (max-width: 768px) {
-    .wrapper{
-        height: 100%;
-        padding: 50px 0;
-    }
-    .card{
-        width: 80%;
-        height: 100px;
-        margin: 0px auto;
-    }
-    .card > .row{
-        justify-content: start;
-        height: 100%;
-    }
-    .card > .row > .icon{
-        color: white;
-        border-radius: 50%;
-        background: #3d3d43;
-    }
-    input:checked + label .icon{
-        align-self: flex-end !important;
-        margin: 20px 0;
-        background: transparent !important;
-    }
-    input:checked + label .description{
-        align-self: flex-end !important;
-        margin: 0px 0;
-    }
-    input:checked + label{
-        height: 300px;
-        width: 80%;
-    }
-    .containee{
-        height: 100%;
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-
-
 .inp{
     display: block;
+}
+
+
+
+.Zones{
+    transition: all .2s ease-in;
+    position: relative;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center; gap: 5px;
+}
+.zon{
+    display: none;
+}
+.Zones > .zon{
+    display: flex;
+}
+.caret{
+    display: block;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 20%;
+    animation: ltr 1s ease-in-out infinite;
+}
+@keyframes ltr {
+    0%{
+        left: 20%;
+    }
+    50%{
+        left: 25%;
+    }
+    100%{
+        left: 20%;
+    }
+}
+.Zones:hover{
+    background-color: black;
+    color: white;
+}
+
+.modal{
+    position: fixed;
+    z-index: 10000000;
+    width: 70%;
+    height: 90vh;
+    background: #000;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+
+}
+.fix{
+    display: none;
+}
+.Zones .fix{
+    display: block;
+    position: fixed;
+}
+.fixe{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 19000;
+    background: #00000064;
+}
+
+.icons{
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+    background: #3d3d43;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.drop{
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+
+.ul{
+    padding: 10px;
+}
+.ul::-webkit-scrollbar{
+    width: 10px;
+    height: 100%;
+    background: #FFF;
+    border-radius: 999px;
+}
+.ul::-webkit-scrollbar-thumb{
+    background: #000;
+    border-radius: 999px;
+}
+.dr{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    width: 200px;
+    padding: 16px;
+    border-radius: 3px;
+}
+.dr:last-child{
+    border: none;
+}
+.dr:hover{
+    background: rgba(0, 0, 0, 1);
+    color: white;
+}
+.lastdrop{
+    width: 140px;
+}
+.last{
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    width: 140px;
+    padding: 16px;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+
+
+.zone, .sub{
+    position: relative;
+    display: inline-block;
+}
+.subzone{
+    margin-left: 10px;
+}
+.select, .subselect{
+    background-color: #212121;
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+.select-items, .sub-items{
+    position: absolute;
+    display: none;
+    background-color: #FFF;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    z-index: 1;
+    height: 200px;
+    top: 120%;
+    left: 10%;
+    overflow: scroll;
+    padding: 0;
+}
+.sub-items{
+    height: auto;
+}
+.select-items::-webkit-scrollbar, .sub-items::-webkit-scrollbar{
+    width: 5px;
+    background: #FFF;
+    border-radius: 10px;
+}
+.select-items::-webkit-scrollbar-thumb, .sub-items::-webkit-scrollbar-thumb{
+    background: #212121;
+    border-radius: 10px;
+}
+.select-items div{
+    width: 200px;
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid#212121;
+}
+.sub-items div{
+    width: 150px;
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid#212121;
+}
+.select-items div:hover, .sub-items div:hover{
+    background-color: #212121;
+    color: white;
+}
+.select-items div:last-child, .sub-items div:last-child{
+    border: none;
 }
